internal/gatewayapi/testdata/mergebackends-grpc-demerge-listener-ctp-divergence-no-sectionname.out.yaml
clientTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: ClientTrafficPolicy
  metadata:
    name: ctp-grpc-1-preserve-case
    namespace: envoy-gateway
  spec:
    http1:
      preserveHeaderCase: true
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      sectionName: grpc-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: grpc-1
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: 'spec.http1.preserveHeaderCase behavior will change in a future release:
          this field will only apply to client connections, for compatibility: use
          BackendTrafficPolicy.http1.preserveHeaderCase for backend settings'
        reason: BehaviorChange
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        kinds:
        - kind: GRPCRoute
        namespaces:
          from: All
      name: grpc-1
      port: 80
      protocol: HTTP
    - allowedRoutes:
        kinds:
        - kind: GRPCRoute
        namespaces:
          from: All
      name: grpc-2
      port: 8080
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: grpc-1
      supportedKinds:
      - kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: grpc-2
      supportedKinds:
      - kind: GRPCRoute
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    name: grpc-route-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: test
          namespace: envoy-gateway-system
        spec:
          logging: {}
          mergeBackends: {}
        status: {}
      listeners:
      - name: envoy-gateway/gateway-1/grpc-1
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      - name: envoy-gateway/gateway-1/grpc-2
        ports:
        - containerPort: 8080
          name: http-8080
          protocol: HTTP
          servicePort: 8080
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    backendClusters:
    - metadata:
        kind: Service
        name: service-1
        namespace: default
        sectionName: "8080"
      name: service/default/service-1/8080/grpc
      setting:
        addressType: IP
        endpoints:
        - host: 7.7.7.7
          port: 8080
        metadata:
          kind: Service
          name: service-1
          namespace: default
          sectionName: "8080"
        name: service/default/service-1/8080/grpc
        protocol: GRPC
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      grpc:
        enableGRPCStats: true
        enableGRPCWeb: true
      hostnames:
      - '*'
      http1:
        preserveHeaderCase: true
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: grpc-1
      name: envoy-gateway/gateway-1/grpc-1
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: GRPCRoute
            name: grpc-route-1
            namespace: default
          name: grpcroute/default/grpc-route-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: grpcroute/default/grpc-route-1/rule/0/backend/0
            protocol: GRPC
            weight: 1
        hostname: '*'
        isHTTP2: true
        metadata:
          kind: GRPCRoute
          name: grpc-route-1
          namespace: default
        name: grpcroute/default/grpc-route-1/rule/0/match/-1/*
    - address: 0.0.0.0
      externalPort: 8080
      grpc:
        enableGRPCStats: true
        enableGRPCWeb: true
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: grpc-2
      name: envoy-gateway/gateway-1/grpc-2
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8080
      routes:
      - destination:
          backendClusterRefs:
          - name: service/default/service-1/8080/grpc
            weight: 1
          metadata:
            kind: GRPCRoute
            name: grpc-route-1
            namespace: default
          name: grpcroute/default/grpc-route-1/rule/0
        hostname: '*'
        isHTTP2: true
        metadata:
          kind: GRPCRoute
          name: grpc-route-1
          namespace: default
        name: grpcroute/default/grpc-route-1/rule/0/match/-1/*
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
